<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8C5C5"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#DC2F60"
        android:onClick="play"
        android:text="@string/playText"
        app:cornerRadius="80dp" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#DC2F60"
        android:onClick="scores"
        android:text="@string/scoreText"
        app:cornerRadius="80dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="405dp"
        android:layout_height="414dp"
        android:layout_above="@+id/playButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-73dp"
        android:contentDescription="@string/logo"
        android:rotation="21"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

</RelativeLayout>