<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8C5C5"
    tools:context=".GameActivity">


    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false"

        android:background="#DC2F60"
        android:paddingLeft="50dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#FDFDFD" />

            <TextView
                android:id="@+id/Score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/recordScore"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/maxScore"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/bottomPanel"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#DC2F60"
            app:cornerRadius="30dp"
            android:text="@string/restartButton" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#DC2F60"
            app:cornerRadius="30dp"
            android:text="@string/backButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomPanel"
        android:layout_centerHorizontal="true"
        android:text="@string/tipText"
        android:textColor="#DC2F60" />

    <com.example.doscerocuatroocho.Game.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tip"
        android:layout_below="@+id/topPanel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp">

    </com.example.doscerocuatroocho.Game.GameView>

</RelativeLayout>